--- a/app/src/main/res/layout/card_1_layout.xml
+++ b/app/src/main/res/layout/card_1_layout.xml
@@ -7,22 +7,32 @@
             name="card"
             type="com.rawtooth.medicineapp.models.Card1DetailClass" />
     </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rectangle_2">
+        android:paddingStart="22dp"
+        android:paddingEnd="22dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:background="@drawable/two_card_back">
 
 
         <ImageView
             android:id="@+id/iv_card1_ic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="28dp"
+            android:layout_height="35dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="16dp"
-            android:src="@drawable/document"
+            android:src="@drawable/notes"
+
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,14 +44,12 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="4dp"
             android:singleLine="true"
-            android:text="@{card.title}"
+            android:text="Upload your prescription"
             android:textColor="#000000"
-            android:textSize="8sp"
+            android:textSize="11sp"
             app:layout_constraintLeft_toRightOf="@id/iv_card1_ic"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/iv_card1_ic"
-            tools:text="Upload your prescription kajdskjasdhkjasdhkajsdhaksjdhasdladsalskdkasldkasldkaslkdjaskldjaslkdjaslkdjaslkjdaslkdjal" />
-
+            app:layout_constraintTop_toTopOf="@id/iv_card1_ic"/>
         <TextView
             android:id="@+id/tv_card1_title_sub_text"
             android:layout_width="0dp"
@@ -49,13 +57,13 @@
             android:layout_marginEnd="4dp"
             android:textColor="#000000"
             android:textSize="8sp"
-            android:text="@{card.subTitle}"
+            android:text="Upload your prescription and\nwe will do the rest"
             app:layout_constraintLeft_toLeftOf="@id/tv_card1_title_text"
-            app:layout_constraintTop_toBottomOf="@id/tv_card1_title_text"
-            tools:text="Upload your prescription" />
+            app:layout_constraintTop_toBottomOf="@id/tv_card1_title_text" />
 
 
         <ImageView
+            android:id="@+id/two_card_iv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -63,8 +71,90 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_card1_title_sub_text" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:src="@drawable/vector17"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="5dp"
+        app:layout_constraintTop_toTopOf="@id/two_card_iv1"
+          app:layout_constraintStart_toStartOf="@id/two_card_iv1"
+            app:layout_constraintBottom_toBottomOf="@id/two_card_iv1" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:onClick="consult"
+            android:layout_marginStart="8dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/two_card_back">
 
+
+            <ImageView
+                android:id="@+id/iv_card1_ic2"
+                android:layout_width="28dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/doctor"
+
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:id="@+id/tv_card1_title_text2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="4dp"
+                android:singleLine="true"
+                android:text="Consult the doctor"
+                android:textColor="#000000"
+                android:textSize="11sp"
+                app:layout_constraintLeft_toRightOf="@id/iv_card1_ic2"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/iv_card1_ic2"
+                tools:text="Consult the doctor" />
+
+            <TextView
+                android:id="@+id/tv_card1_title_sub_text3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:textColor="#000000"
+                android:textSize="8sp"
+                android:text="Don’t have a prescription?\nConsult the doctor."
+                app:layout_constraintLeft_toLeftOf="@id/tv_card1_title_text2"
+                app:layout_constraintTop_toBottomOf="@id/tv_card1_title_text2"/>
+
+
+            <ImageView
+                android:id="@+id/two_card_iv3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:src="@drawable/green_small_circle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_card1_title_sub_text3" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:src="@drawable/vector17"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="5dp"
+                app:layout_constraintTop_toTopOf="@id/two_card_iv3"
+                app:layout_constraintStart_toStartOf="@id/two_card_iv3"
+                app:layout_constraintBottom_toBottomOf="@id/two_card_iv3" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
