--- a/app/src/main/res/drawable/rectangle_3.xml
+++ b/app/src/main/res/drawable/rectangle_3.xml
@@ -17,7 +17,7 @@
         <path
             android:pathData="M20 0H296C307.046 0 316 8.95431 316 20C316 31.0457 307.046 40 296 40H20C8.95431 40 0 31.0457 0 20C0 8.95431 8.95431 0 20 0Z"
             android:strokeWidth="2"
-            android:strokeColor="#FFFFFF"
+            android:strokeColor="#73D686"
             />
 
     </group>
