--- a/app/src/main/res/layout/activity_doctor_consult.xml
+++ b/app/src/main/res/layout/activity_doctor_consult.xml
@@ -2,8 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/consult_v1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".consult.doctor_consult">
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
@@ -13,14 +14,7 @@
         android:background="@drawable/rectangle_6"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
-    <View
-        android:id="@+id/consult_v1"
-        android:layout_width="match_parent"
-        android:layout_height="139dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        android:background="@drawable/rectangle_7"
-        android:elevation="3dp"
-        />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
