--- a/app/src/main/res/layout/activity_user_address.xml
+++ b/app/src/main/res/layout/activity_user_address.xml
@@ -12,34 +12,78 @@
         android:background="@drawable/rectangle_6"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:title="   Profile"/>
-    <View
-
+        app:title="   Address"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/user_address_v1"
-        android:layout_width="match_parent"
-        android:layout_height="99dp"
+        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="40dp"
-        android:background="@drawable/address_back"/>
-    <CheckBox
-        android:layout_width="14dp"
-        android:layout_height="14dp"
-        android:background="@drawable/checkbox_back"
-        app:layout_constraintTop_toTopOf="@id/user_address_v1"
-        app:layout_constraintStart_toStartOf="@id/user_address_v1"
-        android:layout_marginStart="25dp"
-        android:button="@null"
-        android:layout_marginTop="18dp"/>
+        android:background="@drawable/address_back">
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="18dp"/>
     <TextView
         android:layout_width="283dp"
         android:layout_height="55dp"
-        app:layout_constraintStart_toStartOf="@id/user_address_v1"
-        app:layout_constraintTop_toTopOf="@id/user_address_v1"
         android:layout_marginStart="56dp"
         android:layout_marginTop="14dp"
+        android:layout_marginEnd="21dp"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_address_v2"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/user_address_v1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
 
+        android:background="@drawable/address_back">
 
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="18dp"/>
+        <TextView
+            android:layout_width="283dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="21dp"
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_address_v3"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/user_address_v2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:background="@drawable/address_back">
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="18dp"/>
+        <TextView
+            android:layout_width="283dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="21dp"
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
