--- a/app/src/main/res/layout/n_large_layout.xml
+++ b/app/src/main/res/layout/n_large_layout.xml
@@ -1,43 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:id="@+id/n_large_constraint"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginEnd="11dp"
+    android:background="@drawable/medium_background_back"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <View
-        android:id="@+id/n_large_layout_v1"
-        android:layout_width="96dp"
-        android:layout_height="113dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:background="@drawable/rectangle_7"
-        android:elevation="3dp"
-        />
+
 
     <ImageView
         android:id="@+id/n_large_layout_v2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="24dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/heart"
+        app:layout_constraintStart_toStartOf="@id/n_large_constraint"
+        app:layout_constraintTop_toTopOf="@id/n_large_constraint"
+        app:layout_constraintEnd_toEndOf="@id/n_large_constraint"
+        app:layout_constraintBottom_toTopOf="@id/n_large_layout_tv1"
+        android:layout_marginBottom="18dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="39dp"
-        android:background="@drawable/rectangle_6"
-        app:layout_constraintBottom_toBottomOf="@+id/n_large_layout_v1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginEnd="22dp"
+        />
 
     <TextView
         android:id="@+id/n_large_layout_tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="34dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="7dp"
-        android:text="heart"
+        android:text="Heart"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/n_large_layout_v1"
-        app:layout_constraintEnd_toEndOf="@+id/n_large_layout_v1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/n_large_layout_v2"
-       />
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/n_large_constraint"
+        app:layout_constraintStart_toStartOf="@id/n_large_constraint"
+        app:layout_constraintEnd_toEndOf="@id/n_large_constraint"
+        android:layout_marginBottom="7dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
