--- a/app/src/main/res/layout/n_medium_layout.xml
+++ b/app/src/main/res/layout/n_medium_layout.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="13dp"
+    android:background="@drawable/medium_background_back"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <View
-        android:id="@+id/n_medium_layout_v1"
-        android:layout_width="98dp"
-        android:layout_height="134dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:background="@drawable/rectangle_5"
-        android:elevation="3dp"
-        />
+
 
     <ImageView
         android:id="@+id/n_medium_layout_iv1"
         android:layout_width="85dp"
         android:layout_height="61dp"
-        android:layout_marginLeft="7dp"
+        android:layout_marginStart="7dp"
         android:layout_marginTop="17dp"
-        android:layout_marginRight="6dp"
+        android:layout_marginEnd="6dp"
         android:layout_marginBottom="56dp"
         android:scaleType="fitXY"
 
@@ -43,18 +39,17 @@
         app:layout_constraintTop_toBottomOf="@+id/n_medium_layout_iv1" />
     <TextView
         android:id="@+id/n_medium_layout_tv2"
-        android:layout_width="49dp"
-        android:layout_height="11dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/n_medium_layout_tv1"
         android:text="Rs.123"
-        android:textColor="@color/black"
+        android:textSize="8sp"
+        android:textColor="#73D686"
         android:layout_marginLeft="7dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="9dp"
-        android:lineSpacingExtra="2sp"
-        android:translationY="-0.81sp"
         android:gravity="top"
         />
 
