--- a/app/src/main/res/layout/n_medium_widgets_recycler.xml
+++ b/app/src/main/res/layout/n_medium_widgets_recycler.xml
@@ -20,14 +20,13 @@
         />
 
   <androidx.recyclerview.widget.RecyclerView
-      android:layout_width="98dp"
+      android:id="@+id/nMediumRecycle"
+      android:layout_width="match_parent"
       android:layout_marginTop="10dp"
       android:layout_marginLeft="22dp"
-      app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-      android:layout_height="134dp"
+      android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/large_widget_tv1"
       app:layout_constraintLeft_toLeftOf="parent"
-      android:background="@drawable/rectangle_5"
       android:scrollbars = "horizontal"
       android:elevation="3dp"/>
 
