--- a/app/src/main/res/layout/n_small_layout.xml
+++ b/app/src/main/res/layout/n_small_layout.xml
@@ -1,44 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/rectangle_7"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <View
-        android:id="@+id/n_small_layout_v1"
-        android:layout_width="58dp"
-        android:layout_height="58dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
 
-        android:background="@drawable/rectangle_7"
-        android:elevation="3dp"
-        />
 
     <ImageView
-        android:id="@+id/n_large_layout_iv1"
+        android:id="@+id/n_small_layout_iv1"
         android:layout_width="49dp"
         android:layout_height="33dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="11dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="6dp"
+        android:src="@drawable/img4"
+        android:background="@drawable/small_image_back"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/covid_care"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/covid_care"
-        android:layout_width="39dp"
-        android:layout_height="9dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         android:gravity="top"
         android:text="@string/covid_care"
         android:textAppearance="@style/covid_care"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/n_small_layout_v1"
+
          />
 
 
