--- a/app/src/main/res/layout/n_small_widgets_recycler.xml
+++ b/app/src/main/res/layout/n_small_widgets_recycler.xml
@@ -11,6 +11,7 @@
         android:id="@+id/medium_widget_tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:text="@string/shop_by_cat"
@@ -20,14 +21,13 @@
         />
 
   <androidx.recyclerview.widget.RecyclerView
-      android:layout_width="58dp"
+      android:id="@+id/nSmallrecyclerLayout"
+      android:layout_width="match_parent"
       android:layout_marginTop="10dp"
       android:layout_marginLeft="22dp"
-      app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-      android:layout_height="58dp"
+      android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/medium_widget_tv1"
       app:layout_constraintLeft_toLeftOf="parent"
-      android:background="@drawable/rectangle_7"
       android:scrollbars = "horizontal"
       android:elevation="3dp"/>
 
