--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,16 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.cart">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:gravity="center"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/bag_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/black"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:backgroundTint="#E5E5E5"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="#E5E5E5"
+        app:title="     Bag"/>
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/bag_imgv1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bag_toolbar"
+        android:src="@drawable/img4"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="49dp"/>
+    <TextView
+        android:id="@+id/bag_tv1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/bag_imgv1"
+        app:layout_constraintTop_toBottomOf="@id/bag_toolbar"
+        android:layout_marginTop="49dp"
+        android:layout_marginStart="11dp"
+        android:text="Telma 40mg Strip Of\n30 Tablets"
+        android:textSize="12dp"
+        android:textColor="@color/black"/>
+
+    <View
+        android:id="@+id/bag_view2"
+        android:layout_width="316dp"
+        android:layout_height="275dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="197dp"
+        android:layout_marginStart="22dp"
+
+        android:elevation="10dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/bag_view2"
+        app:layout_constraintTop_toTopOf="@id/bag_view2"
+        android:text="Address"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="14dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/bag_view2"
+        app:layout_constraintTop_toTopOf="@id/bag_view2"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="37dp"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:text="Lorem ipsum dolor sit amet,\nLorem ipsum dolor sit amet,"/>
+    <LinearLayout
+        android:id="@+id/bag_ll1"
+        android:layout_width="316dp"
+        android:layout_height="wrap_content"
+        android:weightSum="2"
+        app:layout_constraintStart_toStartOf="@id/bag_view2"
+        app:layout_constraintTop_toTopOf="@id/bag_view2">
+        <Button
+            android:layout_width="119dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bag_btn1_back_layout"
+            android:layout_weight="1"
+            android:layout_marginTop="90dp"
+            android:layout_marginStart="26dp"
+            android:text="Choose prescription"
+            android:textSize="11sp"
+            android:textColor="#73D686"
+            android:gravity="center"
+            android:textAllCaps="false"/>
+        <Button
+            android:layout_width="119dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bag_btn2_back_layout"
+            android:layout_weight="1"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="26dp"
+            android:layout_marginStart="26dp"
+            android:text="Add prescription"
+            android:textSize="11sp"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textAllCaps="false"/>
+
+    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Price Details"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/bag_ll1"
+        app:layout_constraintStart_toStartOf="@id/bag_view2"
+        android:layout_marginStart="13dp"
+        android:textSize="11sp"
+        android:layout_marginTop="28dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Price Details"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/bag_ll1"
+        app:layout_constraintStart_toStartOf="@id/bag_view2"
+        android:layout_marginStart="13dp"
+        android:textSize="11sp"
+        android:layout_marginTop="28dp"/>
+    <TextView
+        android:id="@+id/bag_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Price Details"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/bag_ll1"
+        app:layout_constraintStart_toStartOf="@id/bag_view2"
+        android:layout_marginStart="13dp"
+        android:textSize="11sp"
+        android:layout_marginTop="28dp"/>
+
+
+
+
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
