--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -67,4 +67,14 @@
         <item name="android:textColor">#000000</item>
 
     </style>
+    <style name="log_in">
+        <item name="android:textSize">
+            18sp
+        </item>
+
+        <item name="android:textColor">
+            #73D686
+        </item>
+
+    </style>
 </resources>
